--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /ProjectJ2EERemote/build/
 /ProjectJ2EERemote/dist/
+/ProjectHotelClient/build/
+/ProjectHotelClient/dist/
+/ProjectHotelClient/nbproject/private/
+/ProjectHotelDesktop/nbproject/private/
+/ProjectHotelDesktop/build/
+/ProjectHotelDesktop/dist/
