--- a/ProjectJ2EE/nbproject/project.properties
+++ b/ProjectJ2EE/nbproject/project.properties
@@ -37,4 +37,5 @@ project.ProjectJ2EE-war=ProjectJ2EE-war
 reference.ProjectJ2EE-ejb.dist-ear=${project.ProjectJ2EE-ejb}/dist/ProjectJ2EE-ejb.jar
 reference.ProjectJ2EE-war.dist-ear=${project.ProjectJ2EE-war}/dist/ProjectJ2EE-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
