--- a/ProjectJ2EE/ProjectJ2EE-war/nbproject/private/private.properties
+++ b/ProjectJ2EE/ProjectJ2EE-war/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\khaiv_000\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv32109099552.properties
+deploy.ant.properties.file=C:\\Users\\Ziyi\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv342663859.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/Program Files/glassfish-4.1/glassfish/domains/domain1
-j2ee.server.home=D:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[D:\\Program Files\\glassfish-4.1\\glassfish;D:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=D:/Program Files/glassfish-4.1
-user.properties.file=C:\\Users\\khaiv_000\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+j2ee.server.domain=C:/Users/Ziyi/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.home=C:/Program Files/netBeansGlassFishModule/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\netBeansGlassFishModule\\glassfish-4.1\\glassfish;C:\\Program Files\\netBeansGlassFishModule\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=C:/Program Files/netBeansGlassFishModule/glassfish-4.1
+user.properties.file=C:\\Users\\Ziyi\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
