--- a/ProjectJ2EE/ProjectJ2EE-war/nbproject/project.properties
+++ b/ProjectJ2EE/ProjectJ2EE-war/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -78,6 +79,7 @@ project.ProjectJ2EERemote=../../ProjectJ2EERemote
 reference.ProjectJ2EE-ejb.dist=${project.ProjectJ2EE-ejb}/dist/ProjectJ2EE-ejb.jar
 reference.ProjectJ2EERemote.jar=${project.ProjectJ2EERemote}/dist/ProjectJ2EERemote.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
